[Plugin] feat: Configure Spotless from a Gradle plugin.